--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -1,6 +1,6 @@
+{% load staticfiles %}
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Stealth</title>
     <meta charset="utf-8">
@@ -19,27 +19,26 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="static/css/nav.css">
+    <link rel="stylesheet" href="../../../../static/css/nav.css">
 
-    
+
 </head>
-
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top">
+<nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="index.html">
-                    <img alt="Brand" src="static/images/favicon-brand.png">
+                    <img alt="Brand" src="../../../../static/images/favicon-brand.png">
                 </a>
 
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="my-text"><a href="#">stealth</a></li>
+                    <li class="my-text"><a href="{% url 'index' %}">stealth</a></li>
                 </ul>
                 <div class="my-height">
                     <ul class="nav navbar-nav navbar-left">
-                        <li><a href="#">feed </a></li>
+                        <li><a href="{% url 'feed' %}">feed</a></li>
                         <li><a href="#">resources</a></li>
                         <li><a href="#">chat</a></li>
                         <li><a href="#">search</a></li>
@@ -50,11 +49,7 @@
                 </div>
             </div>
     </nav>
-    <main class="container">
-        <div class="row my-map">
-        <iframe src="https://www.google.com/maps/d/u/0/embed?mid=12ZvP2DguiTJVKPDUbxBXnj4ioCM" width="100%" height="800px"></iframe>
-        </div>
-    </main>
+{% block content %}
+{% endblock %}
 </body>
-
 </html>
