--- a/static/css/splash.css
+++ b/static/css/splash.css
@@ -1,27 +1,80 @@
-body{
+body {
     margin: 0px;
-}
-.background {
-        background-image: url("../images/map.jpg");
-        position: relative;
-}
-@media (min-width: 768px) {
-    .background {
-        width: 100%;
-    }
+    font-family: 'Raleway', sans-serif;
+    color: #f6f6f6;
 }
 
-@media(max-width:768px) {
-    .background {
-        width: 480px;
-    }
+.background {
+    background-image: url('../images/map.jpg');
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    background-repeat: no-repeat;
+    background-position: center;
 }
 
 .layer {
-    background-color: rgba(0, 148, 149, .6);
+    background-color: rgba(0, 148, 149, .93);
     position: absolute;
+    overflow: hidden;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
+}
+
+h1 {
+    display: inline;
+    padding: 5px;
+    margin-top: 13%;
+    margin-left: 2%;
+    margin-bottom: 10px;
+    position: absolute;
+    font-size: 8em;
+}
+
+h2 {
+    display: inline;
+    padding: 5px;
+    margin-top: 27%;
+    text-align: left;
+    margin-bottom: 10px;
+    position: absolute;
+    font-size: 3em;
+    margin-left: 2%;
+}
+
+a{
+    text-decoration: none;
+    color: #f6f6f6;
+    font-weight: lighter;
+}
+
+img {
+    margin-top: 15%;
+    margin-left: 30%;
+    position: relative;
+}
+
+button {
+    position: absolute;
+    margin-top: 23%;
+    background-color: Transparent;
+    background-repeat: no-repeat;
+    border: none;
+    cursor: pointer;
+    overflow: hidden;
+    outline: none;
+    color: #f6f6f6;
+    font-family: 'Raleway', sans-serif;
+    font-size: 3em;
+    text-align: left;
+}
+
+.log {
+    margin-left: 2%;
+}
+
+.sign {
+    margin-left: 13%;
 }
