--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,5 +1,5 @@
-body{
-font-family: 'Raleway', sans-serif;
+body {
+    font-family: 'Raleway', sans-serif;
 }
 
 nav {
@@ -8,11 +8,11 @@ nav {
 
 .navbar-default {
     background-color: #009494;
-    
     height: 75px;
     z-index: 10;
 }
-.navbar{
+
+.navbar {
     margin-bottom: 60px;
 }
 
@@ -46,17 +46,20 @@ nav {
         margin-top: 10px;
     }
 }
-h1{
+
+h1 {
     font-size: 4em;
-    margin-left:0;
+    margin-left: 0;
 }
-h2{
+
+h2 {
     display: inline;
 }
 
-main{
+main {
     color: #191919;
 }
+
 .btn-info {
     color: #f6f6f6;
     background-color: #009494;
@@ -64,10 +67,14 @@ main{
     float: right;
 }
 
-.btn-info:hover{
-    background-color:#005e5e;
+.btn-info:hover {
+    background-color: #005e5e;
 }
 
-.resources{
+.btn-info:visited {
+    background-color: #005e5e;
+}
+
+.resources {
     font-size: 1.5em;
 }
