--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -39,8 +39,8 @@
                 <div class="my-height">
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="{% url 'feed' %}">feed</a></li>
-                        <li><a href="#">resources</a></li>
-                        <li><a href="#">chat</a></li>
+                        <li><a href="{% url 'login' %}">resources</a></li>
+                        <li><a href="{% url 'register' %}">chat</a></li>
                         <li><a href="#">search</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
