--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -27,7 +27,7 @@
 <nav class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="index.html">
+                <a class="navbar-brand" href="{% url 'splash' %}">
                     <img alt="Brand" src="../../static/images/favicon-brand.png">
                 </a>
 
@@ -40,8 +40,8 @@
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="{% url 'feed' %}">feed</a></li>
                         <li><a href="{% url 'resources' %}">resources</a></li>
-                        <li><a href="{% url 'register' %}">chat</a></li>
-                        <li><a href="#">search</a></li>
+                        <li><a href="">chat</a></li>
+                        <li><a href="{% url 'splash' %}">search</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">profile</a></li>
