--- a/django/tools/templates/tools/splash.html
+++ b/django/tools/templates/tools/splash.html
@@ -22,7 +22,7 @@
                 <h1>stealth</h1>
                 <a href="{% url 'login' %}"><button class="log">log in</button></a>
                 <a href="{% url 'register' %}"><button class="sign">sign up</button></a>
-                <h2><a href="#">resources</a></h2>
+                <h2><a href="{% url 'resources' %}">resources</a></h2>
             </div>
         </div>
     </main>
