changed resources and chat

--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -40,7 +40,7 @@
                     <ul class="nav navbar-nav navbar-left">
                         <li><a href="{% url 'feed' %}">feed</a></li>
                         <li><a href="{% url 'resources' %}">resources</a></li>
-                        <li><a href="">chat</a></li>
+                        <li><a href="{% url 'chat' %}">chat</a></li>
                         <li><a href="{% url 'splash' %}">search</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
