--- a/django/tools/templates/tools/detail.html
+++ b/django/tools/templates/tools/detail.html
@@ -3,16 +3,14 @@
     <div class="container">
         <h1>{{ tool.name }}</h1>
         <p>{{ tool.description }}</p>
-        {% if tool.isAvailable %}
-            <i class="fa fa-check-circle" aria-hidden="true"></i> Available
-        {% else %}
-            <i class="fa fa-times-circle" aria-hidden="true"></i> Not Available
-        {% endif %}
-        <div>
-          <img src="{{ tool.model_pic.url }}" width=100px/>
-        </div>
         <div>
           <a href="{% url 'edit' tool.id %}" class="btn btn-sm btn-warning">Edit</a>
+        </div>
+        <div class="container">
+            <form enctype="multipart/form-data" action="" method="post">{% csrf_token %}
+                {{ form.as_p }}
+            <input type="submit" value="comment" />
+        </form>
         </div>
     </div>
 {% endblock %}
