--- a/django/tools/static/css/nav.css
+++ b/django/tools/static/css/nav.css
@@ -79,54 +79,76 @@ main {
     font-size: 1.5em;
 }
 
+
 /* CSS Document */
-  
+
 form, p, span {
-    margin:0;
-    padding:0; }
-  
-input { font:12px arial; }
-  
+    margin: 0;
+    padding: 0;
+}
+
+input {
+    font: 12px arial;
+}
+
 a {
-    color:#0000FF;
-    text-decoration:none; }
-  
-    a:hover { text-decoration:underline; }
-  
+    color: #0000FF;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 #wrapper, #loginform {
-    margin:0 auto;
-    padding-bottom:25px;
-    background:#009494;
-    width:504px;
-    border:1px solid #ACD8F0; }
-  
-#loginform { padding-top:18px; }
-  
-    #loginform p { margin: 5px; }
-  
+    margin: 0 auto;
+    background-color: rgba(0, 148, 149, .25);
+    border: #95989A solid 2px;
+    width: 504px;
+    border: 1px solid #ACD8F0;
+}
+
+#loginform {
+    padding-top: 18px;
+}
+
+#loginform p {
+    margin: 5px;
+}
+
 #chatbox {
-    text-align:left;
-    margin:0 auto;
-    margin-bottom:25px;
-    padding:10px;
-    background:#F6F6F6;
-    height:270px;
-    width:430px;
-    border:1px solid #191919;
-    overflow:auto; }
-  
+    text-align: left;
+    margin: 0 auto;
+    margin-bottom: 25px;
+    padding: 10px;
+    background: #F6F6F6;
+    height: 270px;
+    width: 430px;
+    border: 1px solid #191919;
+    overflow: auto;
+}
+
 #usermsg {
-    width:395px;
-    border:1px solid #ACD8F0; }
-  
-#submit { width: 60px; }
-  
-.error { color: #ff0000; }
-  
-#menu { padding:12.5px 25px 12.5px 25px; }
-  
-.welcome { float:left; }
-  
-.logout { float:right; }
-  
-.msgln { margin:0 0 2px 0; }
+    width: 395px;
+    border: 1px solid #ACD8F0;
+}
+
+#submit {
+    width: 60px;
+}
+
+.error {
+    color: #ff0000;
+}
+
+#menu {
+    padding: 12.5px 25px 12.5px 25px;
+}
+
+.logout {
+    float: right;
+}
+
+.msgln {
+    margin: 0 0 2px 0;
+}
