--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -21,6 +21,9 @@
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../../static/css/nav.css">
 
+    <!-- Favicon -->
+    <link rel='shortcut icon' type='image/x-icon' href='../../static/images/favicon.ico' />
+
 
 </head>
 <body>
