--- a/django/tools/templates/tools/chat.html
+++ b/django/tools/templates/tools/chat.html
@@ -19,7 +19,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
     <!-- Stylesheet -->
-    <link rel="stylesheet" href="../django/tools/static/css/nav.css">
+    <link rel="stylesheet" href="../../static/css/nav.css">
 
 
 </head>
