updated favicon in splash

--- a/django/tools/templates/tools/splash.html
+++ b/django/tools/templates/tools/splash.html
@@ -9,6 +9,9 @@
 
     <!-- Stylesheet -->
     <link rel="stylesheet" href="../../static/css/splash.css">
+
+    <!-- Favicon -->
+    <link rel='shortcut icon' type='image/x-icon' href='../../static/images/favicon.ico' />
 </head>
 
 <body>
