Renamed chatbot to Stella

--- a/django/tools/templates/tools/chat.html
+++ b/django/tools/templates/tools/chat.html
@@ -104,7 +104,7 @@
                 success: function (data) {
                     // prepareResponse(data);
                     console.log(data.result.speech);
-                    writeToChatbox("Chatbot", data.result.speech);
+                    writeToChatbox("Stella", data.result.speech);
 
                 },
                 error: function () {
