--- a/django/tools/templates/tools/chat.html
+++ b/django/tools/templates/tools/chat.html
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand" href="{% url 'splash' %}">
-                    <img alt="Brand" src="../django/tools/static/images/favicon-brand.png">
+                    <img alt="Brand" src="../../static/images/favicon-brand.png">
                 </a>
 
             </div>
