--- a/django/tools/templates/tools/detail.html
+++ b/django/tools/templates/tools/detail.html
@@ -1,20 +1,21 @@
-{% extends 'tools/base.html' %}
-{% block content %}
-    <div class="container">
-        <h1>{{ tool.title }}</h1>
-        <p>{{ tool.description }}</p>
-
-<a href="{% url 'add_comment' pk=tool.pk %}">Add comment</a>
-
-        {% for comment in comments.all %}
-    <div class="comment">
-        <div class="date">{{ comment }}</div>
-    </div>
-{% empty %}
-    <p>No comments here yet :(</p>
-{% endfor %}
-        <div>
-          <a href="{% url 'edit' tool.id %}" class="btn btn-sm btn-warning">Edit</a>
+{% extends 'tools/base.html' %} {% block content %}
+<div class="container">
+    <h1 class="f">{{ tool.title }}</h1> 
+    <a href="{% url 'edit' tool.id %}" class="btn btn-sm btn-warning e">Edit</a>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            {{ tool.description }}
         </div>
     </div>
+    <a class="a atest" href="{% url 'add_comment' pk=tool.pk %}">Add comment</a> {% for comment in comments.all %}
+    <div class="panel panel-default comment">
+        <div class="panel-body date">
+            {{ comment }}
+        </div>
+    </div>
+    {% empty %}
+    <p>No comments here yet :(</p>
+    {% endfor %}
+
+</div>
 {% endblock %}
