--- a/django/tools/templates/tools/feed.html
+++ b/django/tools/templates/tools/feed.html
@@ -1,19 +1,22 @@
-{% extends 'tools/base.html' %}
-{% block content %}
-    <div class="container">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6"><h3>Description</h3></div>
-            </div>
-            {% for post in posts %}
-                <div class="row">
-                    <a href="{% url 'detail' post.id %}"><div class="col-md-4">{{ post.title }}</div></a>
-                    <div class="col-md-6">{{ post.description }}</div>
-                    <div class="col-md-2">
-                    </div>
-                </div>
-            {% endfor %}
-            <a href="{% url 'create' %}"><button> Make a Post </button></a>
+{% extends 'tools/base.html' %} {% block content %}
+<div class="container">
+    <header>
+    <h3 class="f">Feed</h3>
+    <a href="{% url 'create' %}"><button class="b"> Make a Post </button></a>
+    </header>
+    {% for post in posts %}
+    <div class="panel panel-default">
+        <div class="panel-heading">
+            <a class="a" href="{% url 'detail' post.id %}">
+                <div>{{ post.title }}</div>
+            </a>
+        </div>
+        <div class="panel-body">
+            {{ post.description }}
         </div>
     </div>
+    {% endfor %}
+    
+</div>
+</div>
 {% endblock %}
