finished login and register

--- a/django/tools/static/css/nav.css
+++ b/django/tools/static/css/nav.css
@@ -213,3 +213,9 @@ header {
     margin: 15px 0 0 15px;
     position: absolute;
 }
+
+/* Login */
+.col-centered{
+    float: none;
+    margin: 0 auto;
+}
