--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -44,7 +44,7 @@
                         <li><a href="{% url 'feed' %}">feed</a></li>
                         <li><a href="{% url 'resources' %}">resources</a></li>
                         <li><a href="{% url 'chat' %}">chat</a></li>
-                        <li><a href="{% url 'splash' %}">search</a></li>
+                        <li><a href="{% url 'about' %}">about</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         <li><a href="#">profile</a></li>
