--- a/django/tools/templates/tools/chat.html
+++ b/django/tools/templates/tools/chat.html
@@ -1,139 +1,85 @@
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'tools/base.html' %} {% block content %}
+<div id="wrapper">
+    <div id="chatbox"></div>
 
-<head>
-    <title>Chat</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Font -->
-    <link href="https://fonts.googleapis.com/css?family=Raleway:200" rel="stylesheet">
-
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
-    <!-- Stylesheet -->
-    <link rel="stylesheet" href="../../static/css/nav.css">
-
-    <!-- Favicon -->
-    <link rel='shortcut icon' type='image/x-icon' href='../django/tools/static/images/favicon.ico' />
-
-</head>
-
-<body>
-    <nav class="navbar navbar-default">
-        <div class="container">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'splash' %}">
-                    <img alt="Brand" src="../../static/images/favicon-brand.png">
-                </a>
-
-            </div>
-            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                <ul class="nav navbar-nav">
-                    <li class="my-text"><a href="{% url 'index' %}">stealth</a></li>
-                </ul>
-                <div class="my-height">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li><a href="{% url 'feed' %}">feed</a></li>
-                        <li><a href="{% url 'resources' %}">resources</a></li>
-                        <li><a href="{% url 'chat' %}">chat</a></li>
-                        <li><a href="{% url 'splash' %}">search</a></li>
-                    </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">profile</a></li>
-                    </ul>
-                </div>
-            </div>
-    </nav>
-    <div id="wrapper">
-        <div id="chatbox"></div>
-
-        <!--<form name="message" action="">
+    <!--<form name="message" action="">
             <input name="usermsg" type="text" id="usermsg" size="63" />
             <input name="submitmsg" type="submit"  id="submitmsg" value="Send" />
         </form>-->
 
-        <input name="usermsg" type="text" id="usermsg" size="63" />
-        <button id="submitmsg" onclick="submit()">Send</button>
-    </div>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
-    <script type="text/javascript">
-        var accessToken = "427fba490ee242f5b6081ce0fd8bd27a",
-            baseUrl = "https://api.api.ai/v1/";
+    <input name="usermsg" type="text" id="usermsg" size="63" />
+    <button id="submitmsg" onclick="submit()">Send</button>
+</div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3/jquery.min.js"></script>
+<script type="text/javascript">
+    var accessToken = "427fba490ee242f5b6081ce0fd8bd27a",
+        baseUrl = "https://api.api.ai/v1/";
 
-        function writeToChatbox(sender, message) {
+    function writeToChatbox(sender, message) {
 
-            var chatbox = $("#chatbox");
-            var start = chatbox[0].innerText;
-            if (start.length > 0) {
-                start += "\n";
+        var chatbox = $("#chatbox");
+        var start = chatbox[0].innerText;
+        if (start.length > 0) {
+            start += "\n";
+        }
+        start += sender + ": ";
+
+        chatbox[0].innerText = start + message;
+    }
+
+    function messageReceived(text) {
+        var chatbox = $("#chatbox");
+        console.log("Received " + text);
+        //writeToChatbox("Chatbot", text);
+    }
+
+    function send(text) {
+        console.log(JSON.stringify({ query: text, lang: "en", sessionId: "stealth" }));
+        var chatbox = $("#chatbox");
+        writeToChatbox("You", text);
+        console.log("Sending " + text);
+        $.ajax({
+            type: "POST",
+            url: baseUrl + "query",
+            contentType: "application/json; charset=utf-8",
+            dataType: "json",
+            beforeSend: function (request) {
+                request.setRequestHeader("Authorization", "Bearer " + accessToken);
+            },
+            data: JSON.stringify({ query: text, lang: "en", sessionId: "stealth", v: 20150910 }),
+
+            success: function (data) {
+                // prepareResponse(data);
+                console.log(data.result.speech);
+                writeToChatbox("Stella", data.result.speech);
+
+            },
+            error: function () {
+                console.log("meep");
             }
-            start += sender + ": ";
-            
-            chatbox[0].innerText = start + message;
-        }
-
-        function messageReceived(text) {
-            var chatbox = $("#chatbox");
-            console.log("Received " + text);
-            //writeToChatbox("Chatbot", text);
-        }
-
-        function send(text) {
-            console.log(JSON.stringify({ query: text, lang: "en", sessionId: "stealth" }));
-            var chatbox = $("#chatbox");
-            writeToChatbox("You", text);
-            console.log("Sending " + text);
-            $.ajax({
-                type: "POST",
-                url: baseUrl + "query",
-                contentType: "application/json; charset=utf-8",
-                dataType: "json",
-                beforeSend: function (request) {
-                    request.setRequestHeader("Authorization", "Bearer " + accessToken);
-                },
-                data: JSON.stringify({ query: text, lang: "en", sessionId: "stealth", v: 20150910 }),
-
-                success: function (data) {
-                    // prepareResponse(data);
-                    console.log(data.result.speech);
-                    writeToChatbox("Stella", data.result.speech);
-
-                },
-                error: function () {
-                    console.log("meep");
-                }
-            });
-            window.setTimeout(function () {
-                messageReceived(text);
-            }, 500);
-        }
-
-        document.onkeydown = function () {
-            if (window.event.keyCode == '13') {
-                submit();
-            }
-        }
-
-        function submit(event) {
-            var inputbox = $('#usermsg');
-            var message = inputbox.val();
-            send(message);
-            inputbox.val("");
-        }
-        // jQuery Document
-        $(document).ready(function () {
-
         });
-    </script>
+        window.setTimeout(function () {
+            messageReceived(text);
+        }, 500);
+    }
 
-</body>
+    document.onkeydown = function () {
+        if (window.event.keyCode == '13') {
+            submit();
+        }
+    }
 
-</html>
+    function submit(event) {
+        var inputbox = $('#usermsg');
+        var message = inputbox.val();
+        send(message);
+        inputbox.val("");
+    }
+    // jQuery Document
+    $(document).ready(function () {
+
+    });
+</script>
+
+
+{% endblock %}
