--- a/django/tools/templates/tools/splash.html
+++ b/django/tools/templates/tools/splash.html
@@ -26,7 +26,7 @@
                     <div class="butt">
                         <a href="{% url 'login' %}"><button class="log">log in &#124;</button></a>
                         <a href="{% url 'register' %}"><button class="sign">sign up  &#124;</button></a>
-                        <a href="{% url 'register' %}"><button class="about">about us </button></a>
+                        <a href="{% url 'about' %}"><button class="about">about us </button></a>
                     </div>
             </div>
         </div>
