--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -47,7 +47,7 @@
                         <li><a href="{% url 'about' %}">about</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="#">profile</a></li>
+                        <li><a href="{% url 'profile' %}">profile</a></li>
                     </ul>
                 </div>
             </div>
