like button css

--- a/django/tools/static/css/nav.css
+++ b/django/tools/static/css/nav.css
@@ -223,3 +223,10 @@ header {
 .post-title{
     display: block;
 }
+
+#likeButton{
+    margin-top: -6px;
+    margin-right: -10px;
+    border: none;
+    background: none;
+}
