--- a/django/tools/templates/tools/splash.html
+++ b/django/tools/templates/tools/splash.html
@@ -19,14 +19,14 @@
         <div class="background">
         </div>
         <div class="layer">
-            <div class="content">
-                <img alt="icon" src="../../static/images/favicon-splash.png">
-                    <h1>stealth</h1>
-                    <div class="butt">
+            <div class="row">
+                <div class="col-md-offset-4 col-md-4">
+                    <img alt="icon" src="../../static/images/favicon-splash.png">
+                        <h1>stealth</h1>
                         <a href="{% url 'login' %}"><button class="log">log in &#124;</button></a>
-                        <a href="{% url 'register' %}"><button class="sign">sign up  &#124;</button></a>
+                        <a href="{% url 'register' %}"><button class="sign">sign up &#124;</button></a>
                         <a href="{% url 'about' %}"><button class="about">about us </button></a>
-                    </div>
+                </div>
             </div>
         </div>
     </main>
