--- a/django/tools/templates/tools/login.html
+++ b/django/tools/templates/tools/login.html
@@ -4,7 +4,7 @@
     <!-- needs to be moved base.html -->
     <main>
         <div class="row">
-            <div class="col-md-4 col-md-offset-4 col-centered">
+            <div class="col-md-4 col-centered">
                 {% if form.errors %}
                 <p>Your username and password didn't match. Please try again.</p>
                 {% endif %} {% if next %} {% if user.is_authenticated %}
