--- a/django/tools/templates/tools/comment.html
+++ b/django/tools/templates/tools/comment.html
@@ -1,8 +1,10 @@
 {% extends 'tools/base.html' %}
 {% block content %}
-    <h1>New comment</h1>
+<div class="container">
+    <h3>New comment</h3>
     <form method="POST" class="post-form">{% csrf_token %}
         {{ form.as_p }}
         <button type="submit" class="save btn btn-default">Send</button>
     </form>
+</div>
 {% endblock %}
