--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -30,14 +30,14 @@
 <nav class="navbar navbar-default">
         <div class="container">
             <div class="navbar-header">
-                <a class="navbar-brand" href="{% url 'splash' %}">
+                <a class="navbar-brand" href="{% url 'index' %}">
                     <img alt="Brand" src="../../static/images/favicon-brand.png">
                 </a>
 
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="my-text"><a href="{% url 'index' %}">stealth</a></li>
+                    <li class="my-text"><a href="{% url 'map_index' %}">stealth</a></li>
                 </ul>
                 <div class="my-height">
                     <ul class="nav navbar-nav navbar-left">
