fixed urls round 2

--- a/django/tools/templates/tools/base.html
+++ b/django/tools/templates/tools/base.html
@@ -37,7 +37,7 @@
             </div>
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
-                    <li class="my-text"><a href="{% url 'map_index' %}">stealth</a></li>
+                    <li class="my-text"><a href="{% url 'map' %}">stealth</a></li>
                 </ul>
                 <div class="my-height">
                     <ul class="nav navbar-nav navbar-left">
